Refactor alert banner CSS selector for better specificity

--- a/src/alert-banner.html
+++ b/src/alert-banner.html
@@ -27,7 +27,10 @@
     width: 21px;
     height: 20px;
   }
-  div.bc-gov-alertbanner-warning a {
+  div.wp-block-engagement-container
+    div.wp-block-engagement-content
+    div.bc-gov-alertbanner-warning
+    a {
     color: #66512c;
   }
   div.bc-gov-alertbanner p.warning-desc {
